--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <p  class="we">Rock Paper Scissors </p>
     <button onclick="                                                 
           playGame('rock');
-           " class="move2"><img src="images/rock-emoji.png" class="move1"></button>
+           " class="move2"><img src="rock-emoji.png" class="move1"></button>
     <button onclick="
               playGame('paper');
-    " class="move2"><img src="images/paper-emoji.png" class="move1"></button>
+    " class="move2"><img src="paper-emoji.png" class="move1"></button>
     <button onclick="
       playGame('scissors');
-     " class="move2"><img src="images/scissors-emoji.png" class="move1"></button>
+     " class="move2"><img src="scissors-emoji.png" class="move1"></button>
      <p class="js3 result"></p>
      <p class="js4"></p>
      <p class="js2 score1"></p>
