--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         update();
         document.querySelector('.js3').innerHTML=result;
         document.querySelector('.js4').innerHTML
-        =`You <img src="images/${playerMove}-emoji.png" 
+        =`You <img src="${playerMove}-emoji.png" 
         class="move1">
-        <img src="images/${computerMove}-emoji.png" 
+        <img src="${computerMove}-emoji.png" 
         class="move1">
         Computer`;
         }
